# wanderer

./: LICENSE  README.md  wanderer.cabal
app/: Main.hs
benchmark/: Main.hs
src/: GeoAlg.hs  Wanderer.hs
test/: GeoAlgSpec.hs  Spec.hs
