cabal-version:       2.4
name:                wanderer
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/Nolrai/wanderer#wanderer) for more details.
homepage:            https://github.com/Nolrai/wanderer
bug-reports:         https://github.com/Nolrai/wanderer/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2022 Chris Upshaw (From Yukari)
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/Nolrai/wanderer.git

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , relude
                     , linear
                     , vector

  mixins:              base hiding (Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wname-shadowing
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -Werror=incomplete-patterns
                       -Werror=incomplete-record-updates
                       -Werror=implicit-prelude
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Wanderer
                       GeoAlg
  build-depends:       streams

executable wanderer
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       wanderer
                     , gloss
                     , turtle
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite wanderer-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GeoAlgSpec
  build-depends:       wanderer
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wno-orphans

benchmark wanderer-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       wanderer
                     , criterion
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wno-orphans
